# WCRC-WinCodexRemoteConnect

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: firewall-rule.example.cmd  make-server-bundle.ps1  smoke-test.ps1  start-server.example.cmd  start-server.example.ps1
wcrc/: __init__.py  config.py  make_certs.py  remote_exec_client.py  remote_exec_server.py  setup_wizard.py
